<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.austinsehnert.smartart.NewUserRegActivity">



<EditText
    android:id="@+id/username"
    android:layout_width="275dp"
    android:layout_height="41dp"
    android:layout_marginBottom="450dp"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="112dp"
    android:ems="10"
    android:hint="@string/enter_username"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

<TextView
    android:id="@+id/textView"
    android:layout_width="186dp"
    android:layout_height="16dp"
    android:layout_marginBottom="25dp"
    android:layout_marginEnd="149dp"
    android:layout_marginStart="149dp"
    android:layout_marginTop="86dp"
    android:text="Enter Desired Username"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="309dp"
    android:layout_marginEnd="149dp"
    android:layout_marginStart="149dp"
    android:layout_marginTop="80dp"
    android:text="Enter Password"
    android:textAlignment="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/username" />

<EditText
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="268dp"
    android:layout_marginEnd="99dp"
    android:layout_marginStart="98dp"
    android:layout_marginTop="18dp"
    android:ems="10"
    android:hint="@string/enter_password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="199dp"
    android:layout_marginEnd="149dp"
    android:layout_marginStart="149dp"
    android:layout_marginTop="50dp"
    android:text="Confirm Password"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password" />

<EditText
    android:id="@+id/password2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:layout_marginEnd="98dp"
    android:layout_marginStart="98dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:hint="@string/comfirm_password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

<Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="51dp"
    android:layout_marginEnd="162dp"
    android:layout_marginStart="161dp"
    android:layout_marginTop="35dp"
    android:onClick="collectUserInfo"
    android:text="@string/submit_user_info"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password2" />

</android.support.constraint.ConstraintLayout>